--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Blazing fast PR previews with S3 and CloudFront - Deploy and preview your pull requests instantly."
     />
-    <title>React App</title>
+    <title>PR Preview System | Blazing Fast PR Previews</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
